--- a/src/App.css
+++ b/src/App.css
@@ -4,4 +4,24 @@
   padding: 2rem;
   text-align: center;
 }
+div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
+button {
+  margin-top: 20px;
+}
+
+.Ball {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background-color: #ff6347;
+  color: white;
+  margin: 5px;
+}
